--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "fastclick": "1.0.6",
     "@fortawesome/fontawesome-free": "5.7.2",
     "angular": "1.7.7",
-    "bootbox": "5.1.3",
+    "sweetalert": "2.1.2",
     "neo4jd3": "0.0.5",    
     "jquery.flowchart": "1.1.0",
     "js-cookie": "2.2.0",
